microbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbot-service
  namespace: microbot
spec:
  selector:
    app: microbot
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
